samples/_failures_safe/1761785333_3f4214_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5aa42d34.c: In function ‘main’:
./samples/SAFE/__tmp_5aa42d34.c:154:17: error: expected declaration or statement at end of input
  154 |                 result = handle_error(&sm);
      |                 ^~~~~~
./samples/SAFE/__tmp_5aa42d34.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5aa42d34.c:154:17: error: expected declaration or statement at end of input
